# EDAVersi

./: Lequel.cpp  Lequel.h  README.md  ai.cpp  base.cpp  best.cpp  ejemplo.md  model.cpp  new.cpp  test.cpp  view.cpp  view.h
code/: CMakeLists.txt  ai.cpp  ai.h  controller.cpp  controller.h  main.cpp  model.cpp  model.h  view.cpp  view.h
